Set the --illegal-access=permit flag if needed